--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ DB_NAME=mokel
 DB_USERNAME=root
 DB_PASS=
 DB_PORT=3306
+
+# Celery Configuration
+# CELERY_BROKER_URL=redis://localhost:6379/0
+# CELERY_RESULT_BACKEND=redis://localhost:6379/0
