--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ gunicorn==20.1.0
 flask-restx==0.5.1
 python-dotenv==0.19.2
 Flask-Minify==0.37
+requests==2.32.3
+celery==5.4.0
+redis==5.2.1
 
 flask_mysqldb
 # psycopg2-binary
