--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DB_ENGINE=mysql
 DB_HOST=localhost
 DB_NAME=mokel
 DB_USERNAME=root
-DB_PASS=
+DB_PASS=admin
 DB_PORT=3306
 
 # Celery Configuration
